# LJOrganicTranslator

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: _common.py  jobs.py  ocr.py  render.py  transcribe.py  translate.py  upload.py  voiceover.py
backend/app/fonts/: README.md
backend/app/services/: ffmpeg_ops.py  ocr_fallback.py  ocr_vision.py  pipeline.py  prompts.py  runner.py  storage.py  stt_whisper.py  text_renderer.py  translator.py  tts_elevenlabs.py  tts_sarvam.py  voice_catalog.py
backend/scripts/: download_fonts.py
backend/tests/: test_units.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/job/[id]/: page.tsx
frontend/components/: LanguagePicker.tsx  OverlayEditor.tsx  ProgressTimeline.tsx  ScriptEditor.tsx  UploadDropzone.tsx  VideoPreview.tsx
frontend/lib/: api.ts  languages.ts
