[project]
name = "ad-localizer-backend"
version = "0.1.0"
description = "Ad Localizer backend — FastAPI service for localizing Instagram ad videos into Indian regional languages"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py311"
